# smart-office-desktop-app

./: README.md  components.json  package-lock.json  package.json  pnpm-lock.yaml  snapcraft.yaml  tsr.config.json  vite.config.ts  vite.config.ts.timestamp-1728015590900-64e3b58c8d8dd.mjs
.github/workflows/: publish-x86_64.yml  publish.yml  publish_arm.yml
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  lib.rs  main.rs  notification.rs
src/app/components/: alert-dialog.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx  pagination.tsx  popover.tsx  select.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx
src/app/providers/: index.tsx  query.tsx  router.tsx
src/app/routing/: routeTree.gen.ts
src/app/routing/routes/: __root.tsx  index.tsx  sign-in.tsx
src/app/widgets/: mode-toggle.tsx
src/core/entities/: notification.entity.ts  user.entity.ts
src/core/repositories/: notification.repository.ts  user.repository.ts
src/core/services/: notification.service.ts  session.service.ts  user.service.ts
src/core/use-cases/user/sign-in/api/: useSignInHandler.ts
src/core/use-cases/user/sign-in/dtos/: sign-in.ts
src/core/use-cases/user/sign-in/lib/: useForm.ts
src/core/use-cases/user/sign-in/types/: sign-in.ts
src/core/use-cases/user/sign-in/ui/: SignInForm.tsx
src/lib/hooks/: useWebSocket.ts
src/store/session/: index.ts  store.def.ts  store.ts
